--- a/content/post/2023-01-27-r_1/index.ko.Rmd
+++ b/content/post/2023-01-27-r_1/index.ko.Rmd
@@ -1,10 +1,12 @@
 ---
-title: 한글
+title: 응용미시에 쓰이는 R 공부하기 (1)
 author: 한재륜
 date: '2023-01-27'
-slug: test
-categories: []
-tags: []
+slug: r_1
+categories: 
+  - r
+tags: 
+  - r
 description: ~
 image: ~
 math: ~
